centralização de botão

--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
             € 1.449
         </div>
 
-        <div>
+        <div class="botão">
             <a href="compra.html" class="botão-dollar">Buy</a>
         </div>
 
-        <div>
+        <div class="botão">
             <a href="compra.html" class="botão-real">Comprar</a>
         </div>
 
-        <div>
+        <div class="botão">
             <a href="compra.html" class="botão-euro">Adquirir</a>
         </div>
 
