--- a/index.html
+++ b/index.html
@@ -217,15 +217,15 @@
         </div>
 
         <div class="botão">
-            <a href="compra.html" class="botão-dollar">Buy</a>
+            <a href="compraeua.html" class="botão-dollar">Buy</a>
         </div>
 
         <div class="botão">
-            <a href="compra.html" class="botão-real">Comprar</a>
+            <a href="comprabrasil.html" class="botão-real">Comprar</a>
         </div>
 
         <div class="botão">
-            <a href="compra.html" class="botão-euro">Adquirir</a>
+            <a href="compraeuropa.html" class="botão-euro">Adquirir</a>
         </div>
 
 
